--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,12 +2,18 @@
 
 	p {
 		line-height: 1.65;
-		margin: 1.8rem 0; 
+		margin: 0 0 1.8rem 0; 
 		font-weight: 300;
+		font-size: 0.9rem;
+
+		text-align: justify;		/*my own*/
+
 
 		@mixin atSmall {
 			font-size: 1.125rem;
-		}
+			font-size: 1rem;
+			text-align: left;		/*my own (dependence)*/
+		}	
 	}
 
 	p a {
