--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,6 +1,15 @@
 .row {
 
 	@mixin clearfix;
+	
+
+	&--t-padding {
+		padding-top: 40px;
+		
+		@mixin atMedium {
+			padding-top: 80px;
+		}
+	}
 
 	&--gutters {
 		margin-right: -65px;
@@ -10,12 +19,20 @@
 		margin-right: -100px;
 	}
 
+	&--gutters-small {
+		margin-right: -45px;
+	}
+
 	&--gutters > div {
 		padding-right: 65px;
 	}
 
 	&--gutters-large > div {
 		padding-right: 100px;
+	}
+
+	&--gutters-small > div {
+		padding-right: 45px;
 	}
 
 	@mixin atMedium {
@@ -43,5 +60,62 @@
 		}
 	}
 	
+	@mixin atLarge {
+		&__large-4 {
+			max-width: 33.33%;
+			float: left;	
+		}
+
+		&__large-4-larger {
+			max-width: 37%;
+		}
+
+		&__large-6 {
+			float: left;
+			width: 50%;
+		}
+
+		&__large-8 {
+			max-width: 66.66%;
+			float: left;
+		}
+
+		&__large-8-smaller {
+			max-width: 63%;
+		}
+	}
+
+	/*Begin Equal Hight Rules*/
+
+	&--equal-hight-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
+
+		& > div {						/*why?*/
+			float: none;
+			display: flex; 
+		}
+	}
+
+	&--equal-hight-at-large {
+		@mixin atLarge {
+			display: flex;
+		}
+
+		& > div {						
+			float: none;
+			display: flex; 
+		}
+	}
+
+
+
+
 
 }
+
+
+
+
+
