--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -20,9 +20,32 @@
 
 		@mixin atSmall {
 			display: inline-block;
-			margin-right: .5rem;
+			margin-right: 1rem;
 			margin-left: 0;
 			margin-bottom: 0;
 		}
 	}
+
+
+	&__icon--blue {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 0.5rem;
+
+		@mixin atSmall {
+			position: relative;
+			top: 10px;
+			display: inline-block;
+			margin-right: 1.5rem;
+			margin-left: 0;
+			margin-bottom: 0;
+		}
+	}
+
+	&--blue {
+		color: $mainBlue;
+	}
 }
+
+
