--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -10,6 +10,26 @@
 		max-width: 980px;
 	}
 
+	&--no-padding-until-medium {
+		padding-left: 0;
+		padding-right: 0;	
+
+		@mixin atMedium {
+			padding-left: 16px;
+			padding-right: 16px;	
+		}
+	}
+
+	&--no-padding-until-large {
+		padding-left: 0;
+		padding-right: 0;	
+
+		@mixin atLarge {
+			padding-left: 16px;
+			padding-right: 16px;	
+		}
+	}
+
 	.wrapper {
 		padding-left: 0;
 		padding-right: 0;
