--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -8,8 +8,11 @@
 @import "modules/_page-section";
 @import "modules/_headline";
 @import "modules/_row";
-@import "modules/_atmobile";
+/*my own start*/
+	@import "modules/_atmobile";
+/*my own end*/
 @import "modules/_generic-content-container";
 @import "modules/_section-title";
 @import "modules/_feature-item";
 @import "modules/_testimonial";
+@import "modules/_sprite";
