--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,13 +3,21 @@
 	width: 100%;
 	z-index: 2;
 	padding: 10px 0;
+	transition: background-color .4s ease-out;
+
+	&--is-expanded {
+		background-color: rgba($mainBlue, 0.7);
+	} /*added by JS - adding bg color to menu section on mobile*/
 
 	@mixin atMedium {
 		background-color: rgba($mainBlue, 0.3);
 	}
 
 	&__btn-container {
-		float: right;
+
+		@mixin atMedium {
+			float: right;	
+		}
 	}
 
 	&__logo {
@@ -40,6 +48,7 @@
 		top: 15px;
 		right: 15px;
 		cursor: pointer;
+		z-index: 2;
 
 		@mixin atMedium {
 			display: none;
@@ -48,11 +57,33 @@
 
 
 	&__menu-content {
-		display: none;
+		transition: all .4s ease-out;
+		transform: scale(1.2); /*fajna rzecz*/
+		opacity: 0;
+		z-index: -10;
+		position: relative;
+		padding-top: 90px;
+		text-align: center;
+
 
 		@mixin atMedium {
-			display: block;
+			opacity: 1;
+			z-index: 1;
+			padding-top: 0;
+			transform: scale(1);
 		}
+
+		&--is-visible {
+			opacity: 1;
+			z-index: 1;
+			transform: scale(1);
+			
+		} /*added by JS - toggling menu on mobile*/
 	}
 
 }
+
+
+
+
+
