--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -42,16 +42,65 @@
 
 	&__menu-icon {
 		width: 20px;
-		height: 20px;
-		background-color: #fff;
+		height: 19px;
 		position: absolute;
 		top: 15px;
 		right: 15px;
 		cursor: pointer;
 		z-index: 2;
 
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 20px;
+			height: 3px;
+			background-color: #fff;
+			transform-origin: 0 0;
+			transition: all .4s ease-out;
+		}
+
+		&__middle {
+			position: absolute;
+			top: 8px;
+			left: 0;
+			width: 20px;
+			height: 3px;
+			background-color: #fff;
+			transform-origin: 0% 50%;
+			transition: all .3s ease-out;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 20px;
+			height: 3px;
+			background-color: #fff;
+			transform-origin: 0 100%;
+			transition: all .4s ease-out;
+		}
+
 		@mixin atMedium {
 			display: none;
+		}
+	}
+
+	&__menu-icon--close-x {
+		&::before {
+			transform: rotate(45deg) scaleX(1.2); /*originally Brad gives 1.25 for scaleX*/
+		}
+
+		.site-header__menu-icon__middle {
+			opacity: 0;
+			transform: scaleX(0);
+		} /*------------------VERY INTERESTING TRICK!!!*/
+
+		&::after {
+			transform: rotate(-45deg) scaleX(1.2); /*originally Brad gives 1.25 for scaleX*/
 		}
 	}
 
