Completed sticky menu on large screens

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -52,6 +52,10 @@
 			font-weight: 200;
 			font-size: 1rem;
 			background-color: transparent;
+
+			&.is-current-link { /*. means "only if it has a class [class-name]"*/
+				color: #fabb69;
+			} /*-------VERY INTERESTING THING!!!*/
 		}
 
 	}
