--- a/app/assets/styles/modules/_reveal-item.css
+++ b/app/assets/styles/modules/_reveal-item.css
@@ -2,10 +2,10 @@
 	opacity: 0;
 	transition: all .4s ease-out;
 	transform-origin: 50% 0;
-	transform: scale(1.15);
+	/*transform: scale(1.1);*/ /*added by Brad in course*/
 
 	&--is-visible {
 		opacity: 1;
-		transform: scale(1);
+		/*transform: scale(1);*/ /*added by Brad in course*/
 	}
 }
