--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,6 +11,11 @@
 
 	@mixin atMedium {
 		background-color: rgba($mainBlue, 0.3);
+		position: fixed;
+
+		&--dark {
+			background-color: rgba($localDark, 0.8);
+		}
 	}
 
 	&__btn-container {
@@ -28,11 +33,16 @@
 		transform-origin: 50% 0%;
 		background-color: $mainBlue;
 		padding: 25px 36px;
+		transition: all .2s ease-out;
 
 		@mixin atMedium {
 			left: auto;
 			transform: translateX(0);
 			padding: 25px 36px;
+
+			.site-header--dark & {
+				transform: scale(0.56);
+			} /*-------- VERY INTERESTING THING!!*/
 		}
 	}
 
