--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -39,8 +39,11 @@
 			display: inline-block;
 			margin-right: 1.5rem;
 			margin-left: 0;
-			margin-bottom: 0;
 		}
+	}
+
+	&--less-margin {
+		margin-bottom: 0; /*Brad gives here 1.2rem*/
 	}
 
 	&--blue {
