Completed gulp-build task

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -32,7 +32,7 @@
 		
 		@mixin atLarge {
 			&.lazyloaded { /*add these properties only if [&.classname] class is there*/ 
-				background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+				background: url('../../assets/images/testimonials-bg.jpg') top center no-repeat;
 				background-size: cover;	
 			}
 		}	
